nobase_include_HEADERS =
pkgconfig_DATA = gpioplus.pc
lib_LTLIBRARIES = libgpioplus.la
libgpioplus_la_SOURCES =
libgpioplus_la_LIBADD = $(COMMON_LIBS)

nobase_include_HEADERS += gpioplus/chip.hpp
libgpioplus_la_SOURCES += gpioplus/chip.cpp

nobase_include_HEADERS += gpioplus/event.hpp
libgpioplus_la_SOURCES += gpioplus/event.cpp

nobase_include_HEADERS += gpioplus/handle.hpp
libgpioplus_la_SOURCES += gpioplus/handle.cpp

nobase_include_HEADERS += gpioplus/internal/fd.hpp
libgpioplus_la_SOURCES += gpioplus/internal/fd.cpp

nobase_include_HEADERS += gpioplus/internal/sys.hpp
libgpioplus_la_SOURCES += gpioplus/internal/sys.cpp

nobase_include_HEADERS += gpioplus/test/event.hpp
nobase_include_HEADERS += gpioplus/test/sys.hpp
nobase_include_HEADERS += gpioplus/test/handle.hpp

nobase_include_HEADERS += gpioplus/utility/aspeed.hpp
